--- a/scripts1/diasenmes.ipynb
+++ b/scripts1/diasenmes.ipynb
@@ -57,17 +57,23 @@
     "\n",
     "#Si es febrero hay que comprobar si es año bisiesto.\n",
     "elif (mes == 2):\n",
+    "    \n",
     "    #Si es divisible entre 4 es bisiesto.\n",
     "    if year % 4 == 0:\n",
+    "        \n",
     "        #Aunque sea divisible entre 4, si es divisble entre 100 puede no ser bisiesto.\n",
     "        if year % 100 == 0:\n",
+    "            \n",
     "            #Y sí es divisible entre 100, debe serlo también de 400 para ser bisiesto.\n",
     "            if year % 400 == 0:\n",
     "                print('El mes tiene 29 días.')\n",
+    "                \n",
     "            else:\n",
     "                print('El mes tiene 28 días.')\n",
+    "                \n",
     "        else:\n",
     "            print('El mes tiene 29 días.')\n",
+    "            \n",
     "    else:\n",
     "        print('El mes tiene 28 días.')\n",
     "\n",
@@ -82,7 +88,47 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "        "
+    "#Versión dos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Comprobar si es feberero ya que es el único que puede variar.\n",
+    "if (mes == 2):\n",
+    "    \n",
+    "    #Si es divisible entre 4 es bisiesto.\n",
+    "    if year % 4 == 0:\n",
+    "        \n",
+    "        #Aunque sea divisible entre 4, si es divisble entre 100 puede no ser bisiesto.\n",
+    "        if year % 100 == 0:\n",
+    "            \n",
+    "            #Y sí es divisible entre 100, debe serlo también de 400 para ser bisiesto.\n",
+    "            if year % 400 == 0:\n",
+    "                print('El mes tiene 29 días.')\n",
+    "                \n",
+    "            else:\n",
+    "                print('El mes tiene 28 días.')\n",
+    "                \n",
+    "        else:\n",
+    "            print('El mes tiene 29 días.')\n",
+    "            \n",
+    "    else:\n",
+    "        print('El mes tiene 28 días.')\n",
+    "\n",
+    "#Comprobar si es par antes de julio o impar desde agosto, para saber si tiene 30 días.\n",
+    "elif (((mes % 2 == 0) and (mes <= 7)) or (mes % 2 != 0) and (mes >= 8)):\n",
+    "    print(\"El mes tiene 30 días.\")\n",
+    "\n",
+    "#Se podría comprobar si es par despues de agosto e impar antes de julio, para saber si tiene 31 días.\n",
+    "#elif (((mes % 2 == 0) and (mes >= 8)) or (mes % 2 != 0) and (mes <= 7))\n",
+    "\n",
+    "#Salida por defecto al no cumplir las condiciones anteriores.\n",
+    "else:\n",
+    "    print(\"El mes introducido tiene 31 días.\")"
    ]
   }
  ],
