--- a/scripts1/diasenmes.ipynb
+++ b/scripts1/diasenmes.ipynb
@@ -120,11 +120,11 @@
     "        print('El mes tiene 28 días.')\n",
     "\n",
     "#Comprobar si es par antes de julio o impar desde agosto, para saber si tiene 30 días.\n",
-    "elif (((mes % 2 == 0) and (mes <= 7)) or (mes % 2 != 0) and (mes >= 8)):\n",
+    "elif (((mes % 2 == 0) and (mes <= 7)) or ((mes % 2 != 0) and (mes >= 8))):\n",
     "    print(\"El mes tiene 30 días.\")\n",
     "\n",
     "#Se podría comprobar si es par despues de agosto e impar antes de julio, para saber si tiene 31 días.\n",
-    "#elif (((mes % 2 == 0) and (mes >= 8)) or (mes % 2 != 0) and (mes <= 7))\n",
+    "#elif (((mes % 2 == 0) and (mes >= 8)) or ((mes % 2 != 0) and (mes <= 7)))\n",
     "\n",
     "#Salida por defecto al no cumplir las condiciones anteriores.\n",
     "else:\n",
