--- a/scripts1/clasi_nums.ipynb
+++ b/scripts1/clasi_nums.ipynb
@@ -11,27 +11,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Este programa clasifica números enteros introducidos por teclado. Para finalizar el programa introduzca 0.\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(\"Este programa clasifica números enteros introducidos por teclado. Para finalizar el programa introduzca 0.\\n\")"
+    "print(\"Este programa clasifica números enteros introducidos por teclado.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,24 +31,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Introduza un número entero: 4\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "num=int(input(\"Introduza un número entero: \"))"
+    "num = int(input(\"Introduza un número entero: \"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,22 +49,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Variable de control sobre la posibilidad de ser número primo\n",
-    "primo=1\n",
+    "primo = 1\n",
     "\n",
     "#Bucle de comprobación de número primo\n",
     "for i in range(2, num):\n",
     "    if (num % i == 0):\n",
-    "        primo=0"
+    "        primo = 0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,32 +73,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Comprobación si el número es 2, ya que al bucle no entraría.\n",
     "if (num == 2):\n",
-    "    pot=1\n",
+    "    pot = 1\n",
     "\n",
     "else:\n",
     "    #Variables de control sobre la posibilidad de ser potencia de base 2\n",
-    "    resto=num%2\n",
-    "    pot=0\n",
-    "    div=num\n",
+    "    resto = num % 2\n",
+    "    pot = 0\n",
+    "    div = num\n",
     "    \n",
     "    #Bucle de comprobación si es una potencia de base 2\n",
     "    while resto == 0:\n",
-    "        div=div/2\n",
-    "        resto=div%2\n",
+    "        div = div / 2\n",
+    "        resto = div % 2\n",
     "        \n",
     "        if (div == 2):\n",
-    "            pot=1    "
+    "            pot = 1    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,17 +113,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "El número es compuesto.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Mostrar si el número es primo.\n",
     "if (primo == 1):\n",
@@ -153,17 +128,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "El número es potencia de base 2.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Mostrar si el número es potencia de base 2.\n",
     "if (pot == 1):\n",
