--- a/scripts1/calificaciones.ipynb
+++ b/scripts1/calificaciones.ipynb
@@ -54,14 +54,13 @@
     "if (nota < 5):\n",
     "    print(\"SUSPENSO\")\n",
     "\n",
-    "elif ((nota >= 5) and (nota < 6.5)):\n",
+    "elif (nota < 6.5):\n",
     "    print(\"APROBADO\")\n",
     "    \n",
-    "elif ((nota >= 6.5) and (nota < 8.5)):\n",
+    "elif (nota < 8.5):\n",
     "    print(\"NOTABLE\")\n",
-    "    \n",
     "\n",
-    "elif ((nota >= 8.5) and (nota < 10)):\n",
+    "elif (nota < 10):\n",
     "    print(\"SOBRESALIENTE\") \n",
     "\n",
     "elif (nota == 10):\n",
