--- a/scripts1/clasi_nums2.ipynb
+++ b/scripts1/clasi_nums2.ipynb
@@ -51,7 +51,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "while (num != 0):\n",
+    "while (num != 0):        \n",
+    "\n",
+    "    #Comprobar si el número es mayor que 30.\n",
+    "    if (num >= 30):\n",
+    "        print (\"El número\",num,\"es igual o mayor que 30.\")\n",
+    "\n",
+    "    #Comprobar si el número es negativo.\n",
+    "    elif (num < 0):\n",
+    "        print(\"El número\",num,\"es negativo.\")\n",
+    "\n",
+    "    \n",
+    "    \n",
     "    #Variable de control sobre la posibilidad de ser número primo\n",
     "    primo = 1\n",
     "\n",
@@ -59,8 +70,17 @@
     "    for i in range(2, num):\n",
     "        if (num % i == 0):\n",
     "            primo = 0\n",
-    "        \n",
+    "            \n",
+    "    #Mostrar si el número es primo.\n",
+    "    if (primo == 1):\n",
+    "        print (\"El número\",num,\"es primo.\")\n",
     "\n",
+    "    #Comprobar si es un número compuesto.\n",
+    "    elif (primo == 0):\n",
+    "        print(\"El número\",num,\"es compuesto.\")\n",
+    "    \n",
+    "    \n",
+    "    #Comprobación si es una potencia de base 2.\n",
     "    #Comprobación si el número es 2, ya que al bucle de comprobación no entraría.\n",
     "    if (num == 2):\n",
     "        pot = 1\n",
@@ -77,30 +97,11 @@
     "            resto = div % 2\n",
     "        \n",
     "            if (div == 2):\n",
-    "                pot = 1   \n",
-    "        \n",
-    "\n",
-    "    #Comprobar si el número es mayor que 30.\n",
-    "    if (num >= 30):\n",
-    "        print (\"El número introducido es igual o mayor que 30.\")\n",
-    "\n",
-    "    #Comprobar si el número es negativo.\n",
-    "    elif (num < 0):\n",
-    "        print(\"El número introducido es negativo.\")\n",
-    "\n",
-    "\n",
-    "    #Mostrar si el número es primo.\n",
-    "    if (primo == 1):\n",
-    "        print (\"El número introducido es primo.\")\n",
-    "\n",
-    "    #Comprobar si es un número compuesto.\n",
-    "    elif (primo == 0):\n",
-    "        print(\"El número es compuesto.\")\n",
-    "    \n",
-    "\n",
+    "                pot = 1\n",
+    "                \n",
     "    #Mostrar si el número es potencia de base 2.\n",
     "    if (pot == 1):\n",
-    "        print (\"El número es potencia de base 2.\")\n",
+    "        print (\"El número\",num,\"es potencia de base 2.\")\n",
     "    \n",
     "    \n",
     "    #Importamos time para que no pida el número instantaneamente.\n",
@@ -108,7 +109,7 @@
     "    time.sleep(2)\n",
     "    \n",
     "    #Volvemos a pedir número para continuar en el while.    \n",
-    "    num = int(input(\"Introduza un número entero(0 para parar el programa): \"))"
+    "    num = int(input(\"\\n\\nIntroduza un número entero(0 para parar el programa): \"))"
    ]
   }
  ],
