--- a/scripts/scripts2/perfectos2.ipynb
+++ b/scripts/scripts2/perfectos2.ipynb
@@ -63,6 +63,9 @@
     "    #Primer bucle que irá seleccionando los números a comprobar.\n",
     "    for i in range(num1, num2):\n",
     "        \n",
+    "        #Inicio de variable de la suma de divisores.\n",
+    "        div = 0\n",
+    "        \n",
     "        #Segundo bucle que sumará los divisores de cada número.\n",
     "        for n in range(1, i):\n",
     "            if (i % n == 0):\n",
@@ -70,14 +73,7 @@
     "        \n",
     "        #Si la suma de los divisores es igual al número actual del primer bucle, es perfecto.\n",
     "        if (i == div):\n",
-    "            print(\"El número\",i,\"es perfecto\")\n",
-    "            \n",
-    "            #Reinicio de variable\n",
-    "            div = 0\n",
-    "            \n",
-    "        else:\n",
-    "            #Reinicio de variable.\n",
-    "            div = 0"
+    "            print(\"El número\",i,\"es perfecto\")"
    ]
   }
  ],
