--- a/scripts/scripts2/perfectos2.ipynb
+++ b/scripts/scripts2/perfectos2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,16 +11,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Este programa muestra los números perfectos de un interválo introducido. Un número es perfecto si la suma de todos sus divisores(excepto el mismo), son iguales al propio número.\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Este programa muestra los números perfectos de un interválo introducido. Un número es perfecto si la suma de todos sus divisores(excepto el mismo), son iguales al propio número.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,18 +37,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Introduce el primer número del intervalo: 1\n",
+      "introduce el segundo número del intervalo: 100\n"
+     ]
+    }
+   ],
    "source": [
     "num1 = int(input(\"Introduce el primer número del intervalo: \"))\n",
-    "num2 = int(input(\"introduce el segundo número del intervalo: \"))\n",
-    "div = 0"
+    "num2 = int(input(\"introduce el segundo número del intervalo: \"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,9 +65,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El número 6 es perfecto\n",
+      "El número 28 es perfecto\n"
+     ]
+    }
+   ],
    "source": [
     "if (num2 < num1):\n",
     "    print(\"El segundo número introducido debe ser mayor que el primero.\")\n",
