--- a/scripts/scripts2/complejos.ipynb
+++ b/scripts/scripts2/complejos.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "atlantic-failing",
+   "id": "native-leader",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "growing-inspector",
+   "id": "frequent-inventory",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,71 +23,92 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "native-volunteer",
+   "id": "several-breeding",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Pedir variables"
+    "#Pedir valores"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "sufficient-premises",
+   "id": "considerable-panic",
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "num1 = int(input(\"Introduce el primer valor del primer número complejo: \"))\n",
-    "num2 = int(input(\"Introduce el segundo valor (sin i) del primer número complejo: \"))\n",
-    "num3 = int(input(\"Introduce el primer valor del segundo número complejo: \"))\n",
-    "num4 = int(input(\"Introduce el segundo valor (sin i) del segundo número complejo: \"))"
+    "num1 = int(input(\"Introduce la parte real del primer número complejo: \"))\n",
+    "num2 = int(input(\"Introduce la parte imaginaria (sin i) del primer número complejo: \"))\n",
+    "num3 = int(input(\"Introduce la parte real del segundo número complejo: \"))\n",
+    "num4 = int(input(\"Introduce la parte imaginaria (sin i) del segundo número complejo: \"))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "stopped-finland",
+   "id": "greater-jewelry",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Realizar cálculos"
+    "#Realizar cálculo de la parte real sabiendo que i al cuadrado es -1, por lo que para evitar fallos al realizar\n",
+    "#la potencia de un número negativo, añadimos el simbolo \"-\" delante de la segunda operación."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "tropical-revolution",
+   "id": "fourth-concern",
    "metadata": {},
    "outputs": [],
    "source": [
-    "calculo1 = int((num1*num3) + (-(num2*num4)))\n",
-    "calculo2 = int((num1*num4) + (num2*num3))"
+    "calculo_real = int((num1*num3) + (-(num2*num4)))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cheap-fiction",
+   "id": "patient-parish",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Comprobar si el segundo valor es positivo para mostrar el símbolo + en el resultado"
+    "#Realizar el cálculo de la parte imaginaria."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "broke-drunk",
+   "id": "legendary-alloy",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "calculo_imaginario = int((num1*num4) + (num2*num3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "recorded-finland",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Comprobar si el segundo valor es positivo para mostrar el símbolo + en el resultado, ya que al ser positivo no lo\n",
+    "#mostraría. En el caso de ser negativo, no hay problema ya que lo muestra automáticamente."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "crazy-description",
    "metadata": {},
    "outputs": [],
    "source": [
     "if (calculo2 > 0):\n",
-    "    print(\"El resultado es\",calculo1,\"+\",calculo2,\"i\")\n",
+    "    print(\"El resultado es\",calculo_real,\"+\",calculo_imaginario,\"i\")\n",
     "\n",
     "else:\n",
-    "    print(\"El resultado es\",calculo1, calculo2,\"i\")"
+    "    print(\"El resultado es\",calculo_real, calculo_imaginario,\"i\")"
    ]
   }
  ],
