--- a/scripts/scripts4/funciones_areas.ipynb
+++ b/scripts/scripts4/funciones_areas.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "female-athens",
    "metadata": {},
    "outputs": [],
@@ -12,50 +12,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "drawn-aaron",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Este programa calcula el área o volumén de algunos polígonos a elección.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"Este programa calcula el área o volumén de algunos polígonos a elección.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "sharing-pottery",
    "metadata": {},
    "outputs": [],
    "source": [
     "def menu():    #Función del menú para elegir operación\n",
     "    print(\"Escoge una de las siguientes opeciones:\")\n",
-    "    print(\"1. Área de un triangulo\\n2. Área de un rectángulo\\n3. Área de un pentágono\\n4. Área de un circulo\\n5. Volumen de un icosaedro\\n6. Salir\\n\")"
+    "    print(\"1. Área de un triangulo\\n2. Área de un rectángulo\\n3. Área de un pentágono\\n4. Área de un circulo\\n5. Volumen de un icosaedro\\n6. Mostrar el menú\\n0. Salir\\n\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "leading-hughes",
    "metadata": {},
    "outputs": [],
    "source": [
     "def triangulo(base,altura):     #Función que calcula el área de un triángulo sabiendo que se calcula con la formula\n",
-    "                        #(base*altura)/2\n",
+    "                                #(base*altura)/2\n",
     "        area = base*altura/2\n",
     "        return area"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "painful-moscow",
    "metadata": {},
    "outputs": [],
@@ -68,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "primary-collectible",
    "metadata": {},
    "outputs": [],
@@ -78,13 +70,13 @@
     "        import math\n",
     "        apotema = 36*math.pi/180\n",
     "        tangente = math.tan(apotema)\n",
-    "        area = (5*lado**2)/(4*tan)\n",
+    "        area = (5*lado**2)/(4*tangente)\n",
     "        return area"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "dominant-mechanics",
    "metadata": {},
    "outputs": [],
@@ -98,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "biological-tonight",
    "metadata": {},
    "outputs": [],
@@ -113,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "equipped-techno",
    "metadata": {},
    "outputs": [],
@@ -123,58 +115,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "dress-search",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Escoge una de las siguientes opeciones:\n",
-      "1. Área de un triangulo\n",
-      "2. Área de un rectángulo\n",
-      "3. Área de un pentágono\n",
-      "4. Área de un circulo\n",
-      "5. Volumen de un icosaedro\n",
-      "6. Salir\n",
-      "\n",
-      "Operación a realizar: 1\n",
-      "Longitud de la base: 3\n",
-      "Altura del triangulo: 4\n",
-      "El área del triángulo es 6.0\n",
-      "Operación a realizar: 1\n",
-      "Longitud de la base: 6\n",
-      "Altura del triangulo: 5\n",
-      "El área del triángulo es 15.0\n",
-      "Operación a realizar: 6\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "menu()\n",
-    "opcion = int(input(\"Operación a realizar: \"))\n",
+    "menu()    #Llamada a la función menu\n",
     "\n",
-    "while (opcion != 6):\n",
+    "opcion = int(input(\"Operación a realizar: \"))   #Pedir el valor de la opción a realizar\n",
+    "\n",
+    "while (opcion != 0):\n",
     "    \n",
-    "    if opcion == 1:\n",
+    "    if opcion == 1:     #Llamada a la función triángulo\n",
+    "        \n",
     "        base = int(input(\"Longitud de la base: \"))\n",
     "        altura = int(input(\"Altura del triangulo: \"))\n",
     "        resultado = triangulo(base,altura)\n",
     "        print(\"El área del triángulo es\",resultado)\n",
-    "    else:\n",
-    "        break\n",
+    "        \n",
+    "    elif opcion == 2:   #Llamada a la función rectángulo\n",
+    "        \n",
+    "        base = int(input(\"Longitud de la base: \"))\n",
+    "        altura = int(input(\"Altura del rectángulo: \"))\n",
+    "        resultado = rectangulo(base,altura)\n",
+    "        print(\"El área del rectángulo es\",resultado)\n",
     "    \n",
-    "    opcion = int(input(\"\\n\\nOperación a realizar: \"))"
+    "    elif opcion == 3:   #LLamada a la función pentágono\n",
+    "        \n",
+    "        lado = int(input(\"Longitud del lado: \"))\n",
+    "        resultado = pentagono(lado)\n",
+    "        print(\"El área del pentángono es\",resultado)\n",
+    "        \n",
+    "    elif opcion == 4:   #Llamada a la función círculo\n",
+    "        \n",
+    "        radio = int(input(\"Longitud del radio: \"))\n",
+    "        resultado = circulo(radio)\n",
+    "        print(\"El área del círculo es\",resultado)\n",
+    "    \n",
+    "    elif opcion == 5:    #Llamada a la función icosaedro\n",
+    "        \n",
+    "        arista = int(input(\"Longitud de la arista: \"))\n",
+    "        resultado = icosaedro(arista)\n",
+    "        print(\"El volumen del icosaedro es\",resultado)\n",
+    "    \n",
+    "    elif opcion == 6:    #Lllamada a la función menú de nuevo\n",
+    "        \n",
+    "        menu()\n",
+    "        print(\"\\n\")\n",
+    "    else:\n",
+    "        print(\"No has introducido una opción válida.\")\n",
+    "    \n",
+    "    opcion = int(input(\"\\n\\nOperación a realizar: \"))    #Volver a pedir el valor de la opción a realizar"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "capital-masters",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
