--- a/scripts/scripts4/calcu_funciones.ipynb
+++ b/scripts/scripts4/calcu_funciones.ipynb
@@ -121,6 +121,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "menu()\n",
     "seleccion=int(input(\"Indica la operación a realizar: \"))"
    ]
   },
